--- a/PolandVisaAuto/PolandVisaAuto.csproj
+++ b/PolandVisaAuto/PolandVisaAuto.csproj
@@ -60,6 +60,10 @@
     <ApplicationIcon>alarm.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -70,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="PVAutoFill.cs">
       <SubType>Form</SubType>
@@ -95,6 +100,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="App.config" />
     <None Include="Properties\DataSources\VisaTask.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -125,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="alarm.ico" />
+    <Content Include="lib\log4net.dll" />
     <Content Include="WindowsError.wav" />
   </ItemGroup>
   <ItemGroup>
