delete/restore added

--- a/PolandVisaAuto/App.config
+++ b/PolandVisaAuto/App.config
@@ -3,7 +3,14 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
-
+  <appSettings>
+    <add key="host" value="api.decaptcher.com" />
+    <add key="name" value="ZorkiyKrot" />
+    <add key="passw" value="dcccchy179745" />
+    <add key="port" value="3500" />
+    <add key="autoResolve" value="false" />
+    <add key="useProxy" value="false" />
+  </appSettings>
   <!--configure log4net appenders-->
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
