--- a/PolandVisaAuto/App.config
+++ b/PolandVisaAuto/App.config
@@ -9,7 +9,8 @@
     <add key="passw" value="dcccchy179745" />
     <add key="port" value="3500" />
     <add key="autoResolve" value="false" />
-    <add key="useProxy" value="false" />
+    <add key="useProxy" value="true" />
+    <add key="proxyServers" value="195.46.33.96:3128;185.46.151.122:3128;77.109.22.211:3128;92.242.126.86:3128"/>
   </appSettings>
   <!--configure log4net appenders-->
   <log4net>
