--- a/PolandVisaAuto/PolandVisaAuto.csproj
+++ b/PolandVisaAuto/PolandVisaAuto.csproj
@@ -77,8 +77,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DuplForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DuplForm.Designer.cs">
+      <DependentUpon>DuplForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Engine.cs" />
-    <Compile Include="Host.cs" />
     <Compile Include="ImageResolver.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\Annotations.cs" />
@@ -93,6 +98,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="VisaTab.cs" />
+    <EmbeddedResource Include="DuplForm.resx">
+      <DependentUpon>DuplForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PVAutoFill.resx">
       <DependentUpon>PVAutoFill.cs</DependentUpon>
       <SubType>Designer</SubType>
