--- a/PolandVisaAuto/App.config
+++ b/PolandVisaAuto/App.config
@@ -10,7 +10,7 @@
     <add key="port" value="3500" />
     <add key="autoResolve" value="false" />
     <add key="useProxy" value="true" />
-    <add key="proxyServers" value="195.46.33.96:3128;185.46.151.122:3128;77.109.22.211:3128;92.242.126.86:3128"/>
+    <add key="proxyServers" value="185.46.151.122:3128;78.140.197.254:3128;77.109.22.211:3128;62.103.107.9:80;86.57.137.219:3128;195.46.33.96:3128;104.131.219.91:8118;"/>
   </appSettings>
   <!--configure log4net appenders-->
   <log4net>
