add named proxies

--- a/PolandVisaAuto/App.config
+++ b/PolandVisaAuto/App.config
@@ -4,14 +4,17 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
   <appSettings>
-    <add key="host" value="api.de-captcher.com" />
-    <add key="name" value="ZorkiyKrot" />
-    <add key="passw" value="dcccchy179745" />
-    <add key="port" value="3500" />
-    <add key="autoResolve" value="false" />
-    <add key="useProxy" value="true" />
-    <add key="proxyServers" value="91.229.20.73:80;79.143.181.127:3128"/>
-         <!--178.151.149.227:80;109.236.81.101:35194;213.85.92.10:80;37.59.176.38:7808;145.97.196.166:80;185.46.151.122:3128;85.113.253.138:80;78.140.197.254:3128;77.109.22.211:3128;62.103.107.9:80;86.57.137.219:3128;195.46.33.96:3128;104.131.219.91:8118;"/>-->
+    <add key="host" value="api.de-captcher.com"/>
+    <add key="name" value="ZorkiyKrot"/>
+    <add key="passw" value="dcccchy179745"/>
+    <add key="port" value="3500"/>
+    <add key="autoResolve" value="false"/>
+    <add key="useProxy" value="false"/>
+    <add key="proxyServers" value="46.17.47.140:65233:icher:fv6vma;109.234.38.235:65233:icher:fv6vma;91.201.54.34:65233:icher:fv6vma"/>
+    <add key="regCounts" value=""/>
+    <add key="AllowReg" value="5"/>
+    <!--         "91.229.20.73:80;79.143.181.127:3128"/>-->
+    <!--178.151.149.227:80;109.236.81.101:35194;213.85.92.10:80;37.59.176.38:7808;145.97.196.166:80;185.46.151.122:3128;85.113.253.138:80;78.140.197.254:3128;77.109.22.211:3128;62.103.107.9:80;86.57.137.219:3128;195.46.33.96:3128;104.131.219.91:8118;"/>-->
   </appSettings>
   <!--configure log4net appenders-->
   <log4net>
