--- a/E-Konsulat/E-Konsulat.csproj
+++ b/E-Konsulat/E-Konsulat.csproj
@@ -56,12 +56,25 @@
     <Compile Include="AddressData.Designer.cs">
       <DependentUpon>AddressData.cs</DependentUpon>
     </Compile>
+    <Compile Include="BossAddressData.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BossAddressData.Designer.cs">
+      <DependentUpon>BossAddressData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CountryData.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CountryData.Designer.cs">
+      <DependentUpon>CountryData.cs</DependentUpon>
+    </Compile>
     <Compile Include="E-Konsulat.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="E-Konsulat.Designer.cs">
       <DependentUpon>E-Konsulat.cs</DependentUpon>
     </Compile>
+    <Compile Include="KonsulatTask.cs" />
     <Compile Include="PassportData.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -81,6 +94,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddressData.resx">
       <DependentUpon>AddressData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BossAddressData.resx">
+      <DependentUpon>BossAddressData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CountryData.resx">
+      <DependentUpon>CountryData.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="E-Konsulat.resx">
       <DependentUpon>E-Konsulat.cs</DependentUpon>
