--- a/E-Konsulat/App.config
+++ b/E-Konsulat/App.config
@@ -1,6 +1,73 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="E_Konsulat.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
+  <appSettings>
+    <add key="host" value="api.de-captcher.com"/>
+    <add key="name" value="ZorkiyKrot"/>
+    <add key="passw" value="dcccchy179745"/>
+    <add key="port" value="3500"/>
+    <add key="autoResolve" value="false"/>
+    <add key="useProxy" value="false"/>
+    <add key="proxyServers" value="46.17.47.140:65233:icher:fv6vma;109.234.38.235:65233:icher:fv6vma;91.201.54.34:65233:icher:fv6vma"/>
+    <add key="regCounts" value=""/>
+    <add key="AllowReg" value="5"/>
+    <!--         "91.229.20.73:80;79.143.181.127:3128"/>-->
+    <!--178.151.149.227:80;109.236.81.101:35194;213.85.92.10:80;37.59.176.38:7808;145.97.196.166:80;185.46.151.122:3128;85.113.253.138:80;78.140.197.254:3128;77.109.22.211:3128;62.103.107.9:80;86.57.137.219:3128;195.46.33.96:3128;104.131.219.91:8118;"/>-->
+  </appSettings>
+  <!--configure log4net appenders-->
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file type="log4net.Util.PatternString" value="logs\%property{fname}_%property{date}.log"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{dd/MMM/yyyy HH:mm:ss} [%level] [%thread] - %message%newline"/>
+      </layout>
+    </appender>
+    <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file type="log4net.Util.PatternString" value="logs\%property{fname}_%date{yyyy_MM}.log"/>
+      <rollingStyle value="Size"/>
+      <appendToFile value="true"/>
+      <staticLogFileName value="true"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="10MB"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="[%level] %date{ISO8601} [%thread] - %message%newline"/>
+      </layout>
+    </appender>
+    <appender name="Console" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{dd/MMM/yyyy HH:mm:ss} [%level] [%thread] - %message%newline%newline"/>
+      </layout>
+    </appender>
+    <appender name="EventLog" type="log4net.Appender.EventLogAppender">
+      <applicationName value="ImageServer"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%level %date{dd/MMM/yyyy HH:mm:ss} %property{pid} - %message%newline%newline"/>
+      </layout>
+    </appender>
+    <appender name="Trace" type="log4net.Appender.TraceAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{dd/MMM/yyyy HH:mm:ss} %level [%thread] %property{pid} - %message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <!-- Options are "ALL", "DEBUG", "INFO", "WARN", "ERROR", "FATAL" and "OFF". -->
+      <level value="ALL"/>
+      <appender-ref ref="Trace"/>
+    </root>
+    <logger name="PolandVisaAuto.exe">
+      <level value="ALL"/>
+      <appender-ref ref="RollingFile"/>
+      <appender-ref ref="Console"/>
+    </logger>
+  </log4net>
+
+<startup><supportedRuntime version="v2.0.50727"/></startup><userSettings>
+  </userSettings>
 </configuration>
