--- a/E-Konsulat/App.config
+++ b/E-Konsulat/App.config
@@ -12,7 +12,7 @@
     <add key="passw" value="dcccchy179745"/>
     <add key="port" value="3500"/>
     <add key="autoResolve" value="false"/>
-    <add key="useProxy" value="false"/>
+    <add key="useProxy" value="true"/>
     <add key="proxyServers" value="46.17.47.140:65233:icher:fv6vma;109.234.38.235:65233:icher:fv6vma;91.201.54.34:65233:icher:fv6vma"/>
     <add key="regCounts" value=""/>
     <add key="AllowReg" value="5"/>
