--- a/PolandVisa/app.config
+++ b/PolandVisa/app.config
@@ -4,6 +4,12 @@
     <supportedRuntime version="v2.0.50727" />
   </startup>
   <appSettings>
+    <add key="host" value="api.de-captcher.com"/>
+    <add key="name" value="ZorkiyKrot"/>
+    <add key="passw" value="dcccchy179745"/>
+    <add key="port" value="3500"/>
+    <add key="autoResolve" value="true"/>
+
     <add key="NotifCount" value="1" />
     <add key="ReqInterval" value="1" />
     <add key="SubInterval" value="1" />
