--- a/PolandVisaAuto/App.config
+++ b/PolandVisaAuto/App.config
@@ -4,6 +4,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
   <appSettings>
+    <add key="ReqInterval" value="1000" />
     <add key="host" value="api.de-captcher.com"/>
     <add key="name" value="ZorkiyKrot"/>
     <add key="passw" value="dcccchy179745"/>
